; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/vt/extr_vt_ioctl.c_vt_waitactive.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/vt/extr_vt_ioctl.c_vt_waitactive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_event_wait = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@VT_EVENT_SWITCH = common dso_local global i32 0, align 4
@fg_console = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vt_waitactive(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.vt_event_wait, align 8
  store i32 %0, i32* %3, align 4
  br label %5

5:                                                ; preds = %26, %1
  %6 = load i32, i32* @VT_EVENT_SWITCH, align 4
  %7 = getelementptr inbounds %struct.vt_event_wait, %struct.vt_event_wait* %4, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  %9 = call i32 @__vt_event_queue(%struct.vt_event_wait* %4)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @fg_console, align 4
  %12 = add nsw i32 %11, 1
  %13 = icmp eq i32 %10, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = call i32 @__vt_event_dequeue(%struct.vt_event_wait* %4)
  br label %32

16:                                               ; preds = %5
  %17 = call i32 @__vt_event_wait(%struct.vt_event_wait* %4)
  %18 = call i32 @__vt_event_dequeue(%struct.vt_event_wait* %4)
  %19 = getelementptr inbounds %struct.vt_event_wait, %struct.vt_event_wait* %4, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = load i32, i32* @EINTR, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %2, align 4
  br label %33

25:                                               ; preds = %16
  br label %26

26:                                               ; preds = %25
  %27 = getelementptr inbounds %struct.vt_event_wait, %struct.vt_event_wait* %4, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = load i32, i32* %3, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %5, label %32

32:                                               ; preds = %26, %14
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %22
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @__vt_event_queue(%struct.vt_event_wait*) #1

declare dso_local i32 @__vt_event_dequeue(%struct.vt_event_wait*) #1

declare dso_local i32 @__vt_event_wait(%struct.vt_event_wait*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
